# LFU_cache

./: README.md
Cache/: CMakeLists.txt  cache.cpp  cache.hpp  ideal_cache.cpp  ideal_cache.hpp
Process/: read_and_process.cpp  read_and_process.hpp
Tests/: 10test.txt  1test.txt  2test.txt  3test.txt  4test.txt  5test.txt  6test.txt  7test.txt  8test.txt  9test.txt  CMakeLists.txt  ideal_answers.txt  lfu_answers.txt  start_tests  test.cpp  test_generate.py
